# xsd_parser__type_already_defined_bug__minimal_reproduction

./: Cargo.toml  README.md  build.rs  minimal_reproduction_schema.xsd
